# BLIN

./: .cursorrules  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bien_detail.rs  csv_util.rs  date_format.rs  db.rs  db_io.rs  lib.rs  main.rs  monnaie_domaine.rs  network_local.rs  print_model_sync.rs  print_seed.rs  print_template.rs  privileges.rs  remote.rs  session.rs  startup_sync.rs  sync_progress.rs
src-tauri/src/ai/: access_denied.rs  agent.rs  alert_personify.rs  alert_pool.rs  config.rs  crud.rs  dashboard_chat.rs  dashboard_transition.rs  dda_bridge.rs  experience.rs  format_display.rs  fts_rewrite.rs  greetings.rs  hardware_profile.rs  intent_filters.rs  knowledge_layout.txt  knowledge_schema.txt  knowledge_tools.txt  llama_server.rs  login_messages.rs  mod.rs  quick_answers.rs  rag.rs  reports.rs  runtime_config.rs  runtime_install.rs  stats_interpret.rs  store.rs  tools.rs  translate.rs  vision.rs  web_search.rs
src-tauri/src/commands/: ai.rs  auth.rs  biens.rs  contrats.rs  dda.rs  documents.rs  entity.rs  finances.rs  hangars.rs  io.rs  mod.rs  print_models.rs  remote.rs  users.rs
src-tauri/src/dda/: config.rs  crud.rs  filters.rs  knowledge.rs  media.rs  mod.rs  registry.rs  schema.rs  stats_catalog.rs  success_alerts.rs  triggers.rs  validation.rs
src-tauri/src/entity/: apply.rs  attr_types.rs  bootstrap.rs  branding.rs  child_table.rs  compteur.rs  config.rs  create_draft.rs  logo.rs  (+23 more)
(+198 files in other folders)
